--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.15.0",
     "typed.js": "^2.0.16"
   },
